# airgradient-client

./: CMakeLists.txt  cellular-registration-flow.mmd
src/: agSerial.cpp  agSerial.h  airgradientCellularClient.cpp  airgradientCellularClient.h  airgradientClient.cpp  airgradientClient.h  airgradientWifiClient.cpp  airgradientWifiClient.h  atCommandHandler.cpp  atCommandHandler.h  cellularModule.cpp  cellularModule.h  cellularModuleA7672xx.cpp  cellularModuleA7672xx.h  endpointSelector.cpp  endpointSelector.h
src/coap-packet-cpp/: README.md
src/coap-packet-cpp/src/: CoapBuilder.cpp  CoapBuilder.h  CoapError.h  CoapPacket.h  CoapParser.cpp  CoapParser.h  CoapTypes.h
src/payload-encoder/: README.md  rfc_airgradient-cellular-payload_v0.md
src/payload-encoder/client/examples/: demo.cpp
src/payload-encoder/client/src/: payload_encoder.cpp
src/payload-encoder/client/test/: test_single_channel.cpp  test_sizes.cpp
src/payload-encoder/examples/: demo.cpp
src/payload-encoder/server/: README.md
src/payload-encoder/server/src/: example_usage.js  payload_decoder.js  payload_types.js  test_decoder.js
src/payload-encoder/src/: PayloadEncoder.cpp  PayloadEncoder.h  PayloadTypes.h  payload_encoder.h  payload_types.h
src/payload-encoder/test/: test_batching.cpp  test_dual_channel.cpp  test_encoder.cpp
